# sonic-sdi-sys-vm

./: Makefile.am  README.md  configure.ac  package.cfg
cfg/: Makefile
cfg/sdi/: platform_init.sh  sdi-db-create.sql
debian/: changelog  control  libsonic-sdi-sys-vm1.install
scripts/: Makefile  os10-vm-plat-event
sonic/: sdi_db.h  sdi_db_config.h  sdi_sys_vm.h  sdi_vm_sys_init.h
src/: Makefile  sdi_db_ops.c  sdi_vm_entity.c  sdi_vm_fan.c  sdi_vm_led.c  sdi_vm_media.c  sdi_vm_sys.c  sdi_vm_thermal.c
src/unit_test/: Makefile
